# FidelityFX-SPD

./: .gitlab-ci.yml  LICENSE  README.md
ffx-spd/: ffx_spd.h
sample/: CMakeLists.txt  README.md  common.cmake  license.md
sample/media/envmaps/papermill/: README.md
sample/src/Common/: SpdSample.json
sample/src/DX12/: CMakeLists.txt  CSDownsampler.cpp  CSDownsampler.h  CSDownsampler.hlsl  PSDownsampler.cpp  PSDownsampler.h  PSDownsampler.hlsl  SPDCS.cpp  SPDCS.h  SPDIntegration.hlsl  SPDIntegrationLinearSampler.hlsl  SPDRenderer.cpp  SPDRenderer.h  SPDSample.cpp  SPDSample.h  SPDVersions.cpp  SPDVersions.h  SPD_CS.cpp  SPD_CS.h  SPD_CS_Linear_Sampler.cpp  SPD_CS_Linear_Sampler.h  SPD_Integration.hlsl  SPD_Integration_Linear_Sampler.hlsl  SPD_Renderer.cpp  SPD_Renderer.h  SPD_Sample.cpp  SPD_Sample.h  SPD_Versions.cpp  SPD_Versions.h  stdafx.cpp  stdafx.h
sample/src/VK/: CMakeLists.txt  CSDownsampler.cpp  CSDownsampler.glsl  CSDownsampler.h  PSDownsampler.cpp  PSDownsampler.glsl  PSDownsampler.h  SPDCS.cpp  SPDCS.h  SPDIntegration.glsl  SPDIntegration.hlsl  SPDIntegrationLinearSampler.glsl  SPDIntegrationLinearSampler.hlsl  SPDRenderer.cpp  SPDRenderer.h  SPDSample.cpp  SPDSample.h  SPDVersions.cpp  SPDVersions.h  SPD_CS.cpp  SPD_CS.h  SPD_CS_Linear_Sampler.cpp  SPD_CS_Linear_Sampler.h  SPD_Integration.glsl  SPD_Integration.hlsl  SPD_Integration_Linear_Sampler.glsl  SPD_Integration_Linear_Sampler.hlsl  SPD_Renderer.cpp  SPD_Renderer.h  SPD_Sample.cpp  SPD_Sample.h  SPD_Versions.cpp  SPD_Versions.h  stdafx.cpp  stdafx.h
